--- a/src/css/index.css
+++ b/src/css/index.css
@@ -239,6 +239,8 @@
   display: flex;
   justify-content: center;
   gap: 8px;
+  max-width: 100vw;
+  flex-wrap: wrap;
 }
 .container .pagination .pagination-button {
   padding: 8px;
