--- a/src/sass/Layout/_main.scss
+++ b/src/sass/Layout/_main.scss
@@ -195,6 +195,8 @@
     display: flex;
     justify-content: center;
     gap: 8px;
+    max-width: 100vw;
+    flex-wrap: wrap;
     .pagination-button {
       padding: 8px;
       transition: 0.2s ease;
